# Veriskein

./: .gitignore  Cargo.toml  Justfile  README.md  requirement.txt
bpf/: common.h  content_io.bpf.c  fs.bpf.c  net.bpf.c  proc.bpf.c  tls_uprobe.bpf.c  vmlinux.h
config/: agents.toml  defaults.toml  injection_keywords.toml  sensitive.toml
crates/veriskein-alert/: Cargo.toml
crates/veriskein-alert/src/: lib.rs  record.rs  schema.rs  tests.rs
crates/veriskein-bpf/: Cargo.toml  build.rs
crates/veriskein-bpf/src/: lib.rs  runtime.rs  tests.rs
crates/veriskein-capture/: Cargo.toml
crates/veriskein-capture/src/: lib.rs  maps.rs  reconcile.rs
crates/veriskein-cli/: Cargo.toml
crates/veriskein-cli/src/: main.rs
crates/veriskein-collector/: Cargo.toml
crates/veriskein-collector/src/: core.rs  lib.rs  tests.rs
crates/veriskein-content/: Cargo.toml
crates/veriskein-content/src/: extract.rs  http.rs  lib.rs  mcp.rs  model.rs  reassembly.rs  tests.rs
crates/veriskein-correlator/: Cargo.toml
crates/veriskein-correlator/src/: artifact.rs  capi.rs  chain.rs  lib.rs  matching.rs  prompt.rs  redaction.rs
crates/veriskein-daemon/: Cargo.toml
crates/veriskein-daemon/src/: driver.rs  enrich.rs  entry.rs  env.rs  ipc.rs  lib.rs  main.rs  metrics.rs  output.rs  pipeline.rs  preflight.rs
crates/veriskein-detectors/: Cargo.toml
crates/veriskein-detectors/src/: base.rs  capi.rs  deadloop.rs  engine.rs  finding.rs  lib.rs  mcp.rs  signals.rs  tests.rs
crates/veriskein-graph/: Cargo.toml
crates/veriskein-graph/src/: config.rs  evidence.rs  lib.rs  state.rs  tests.rs
crates/veriskein-graph/src/state/: roles.rs
crates/veriskein-ipc/: Cargo.toml
crates/veriskein-ipc/src/: frame.rs  lib.rs  ndjson.rs  tests.rs
crates/veriskein-normalizer/: Cargo.toml
crates/veriskein-normalizer/src/: access.rs  config.rs  lib.rs  state.rs  tests.rs
crates/veriskein-normalizer/src/state/: apply.rs  path.rs  process.rs
crates/veriskein-perf/: Cargo.toml
crates/veriskein-perf/src/: lib.rs  main.rs  tests.rs
crates/veriskein-proto/: Cargo.toml
crates/veriskein-proto/src/: contracts.rs  defaults.rs  finding.rs  ids.rs  kinds.rs  lib.rs  net.rs  owned.rs  parse.rs  runtime.rs  test_support.rs  tests.rs  types.rs  wire.rs
crates/veriskein-retention/: Cargo.toml
crates/veriskein-retention/src/: lib.rs
crates/veriskein-state-net/: Cargo.toml
crates/veriskein-state-net/src/: lib.rs  state.rs  tests.rs
crates/veriskein-test/: Cargo.toml
crates/veriskein-test/src/: assert_cmd.rs  lib.rs  main.rs  replay.rs  tests.rs
crates/veriskein-test/src/assertion/: matchers.rs  mod.rs  parse.rs  report.rs  spec.rs
docs/: AI_USAGE.md  对比分析_功能性能创新性.md  开发进度与完成情况.md  设计方案文档.md  进展汇报.pptx
docs/ai-interactions/: 2026-05-01-foundation-and-base-loop.md  2026-06-21-22-tls-capi-and-hardening.md  2026-06-30-submission-verification-and-perf.md  README.md  redaction-notes.md
proto/: alert.schema.json
tests/: run_all.sh  run_phase0_dry_run.sh
tests/perf/: README.md  run.sh
tests/perf/workloads/: mixed_workload.sh
tests/replay/: README.md  alert_redaction.expect.jsonl  alert_redaction.jsonl  attribution_shell.expect.jsonl  attribution_shell.jsonl  benign_shell.expect.jsonl  benign_shell.jsonl  cross_agent_prompt_injection.jsonl  cross_agent_prompt_injection_parallel_streams.expect.jsonl  cross_agent_prompt_injection_parallel_streams.jsonl  deadloop_waste.expect.jsonl  deadloop_waste.jsonl  out_of_workspace_deletion.expect.jsonl  out_of_workspace_deletion.jsonl  sensitive_file_access_shadow.expect.jsonl  sensitive_file_access_shadow.jsonl  startup_shell.jsonl  tls_prompt_same_session.expect.jsonl  tls_prompt_same_session.jsonl
tests/scenarios/benign_shell/: run.sh  scenario.toml  setup.sh
tests/scenarios/cross_agent_prompt_injection_parallel_streams_tls/: scenario.toml  setup.sh
tests/scenarios/cross_agent_prompt_injection_tls/: expect.jsonl  scenario.toml  setup.sh
tests/scenarios/deadloop_waste/: expect.jsonl  run.sh  scenario.toml  setup.sh
tests/scenarios/degradation_honesty/: daemon_args  expect.jsonl  run.sh  scenario.toml  setup.sh
tests/scenarios/out_of_workspace_deletion/: expect.jsonl  run.sh  scenario.toml  setup.sh
tests/scenarios/sensitive_file_access_shadow/: expect.jsonl  run.sh  scenario.toml  setup.sh
tests/scenarios/tls_openssl_prompt_capture/: expect.jsonl  run.sh  scenario.toml  setup.sh
tests/scenarios/unexpected_shell_basic/: expect.jsonl  run.sh  scenario.toml  setup.sh
