[workspace]
members = [
    "crates/veriskein-alert",
    "crates/veriskein-bpf",
    "crates/veriskein-collector",
    "crates/veriskein-content",
    "crates/veriskein-correlator",
    "crates/veriskein-cli",
    "crates/veriskein-daemon",
    "crates/veriskein-detectors",
    "crates/veriskein-graph",
    "crates/veriskein-ipc",
    "crates/veriskein-normalizer",
    "crates/veriskein-perf",
    "crates/veriskein-proto",
    "crates/veriskein-state-net",
    "crates/veriskein-test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Codex"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.8"
caps = "0.5"
clap = { version = "4.5", features = ["derive", "env"] }
globset = "0.4"
jsonschema = "0.37"
libbpf-cargo = "0.26.2"
libbpf-rs = "0.26.2"
libc = "0.2"
plain = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tokio = { version = "1.48", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
