[package]
name = "veriskein-alert"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
veriskein-proto = { path = "../veriskein-proto" }

[lints]
workspace = true
