[package]
name = "veriskein-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
veriskein-bpf = { path = "../veriskein-bpf" }
veriskein-graph = { path = "../veriskein-graph" }
veriskein-proto = { path = "../veriskein-proto" }

[lints]
workspace = true
