[package]
name = "veriskein-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
veriskein-ipc = { path = "../veriskein-ipc" }

[[bin]]
name = "veriskein-cli"
path = "src/main.rs"

[lints]
workspace = true
