[package]
name = "veriskein-collector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
veriskein-proto = { path = "../veriskein-proto" }

[lints]
workspace = true

