[package]
name = "veriskein-content"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
veriskein-proto = { path = "../veriskein-proto" }

[lints]
workspace = true
