[package]
name = "veriskein-correlator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
blake3.workspace = true
serde.workspace = true
veriskein-proto = { path = "../veriskein-proto" }

[lints]
workspace = true
