[package]
name = "veriskein-correlator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
toml.workspace = true
unicode-normalization.workspace = true
veriskein-proto = { path = "../veriskein-proto" }

[lints]
workspace = true
