[package]
name = "veriskein-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
caps.workspace = true
clap.workspace = true
libc.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
veriskein-alert = { path = "../veriskein-alert" }
veriskein-bpf = { path = "../veriskein-bpf" }
veriskein-collector = { path = "../veriskein-collector" }
veriskein-proto = { path = "../veriskein-proto" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
