[package]
name = "veriskein-detectors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
veriskein-content = { path = "../veriskein-content" }
veriskein-correlator = { path = "../veriskein-correlator" }
veriskein-graph = { path = "../veriskein-graph" }
veriskein-normalizer = { path = "../veriskein-normalizer" }
veriskein-proto = { path = "../veriskein-proto" }
veriskein-retention = { path = "../veriskein-retention" }

[lints]
workspace = true
