[package]
name = "veriskein-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
veriskein-normalizer = { path = "../veriskein-normalizer" }
veriskein-proto = { path = "../veriskein-proto" }

[lints]
workspace = true
