[package]
name = "veriskein-normalizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
globset.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
veriskein-proto = { path = "../veriskein-proto" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
