[package]
name = "veriskein-perf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "veriskein-perf"
path = "src/main.rs"

[lints]
workspace = true
