[package]
name = "veriskein-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
plain.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true

