[package]
name = "veriskein-state-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
veriskein-normalizer = { path = "../veriskein-normalizer" }

[dev-dependencies]
veriskein-proto = { path = "../veriskein-proto" }

[lints]
workspace = true
