[package]
name = "veriskein-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
veriskein-alert = { path = "../veriskein-alert" }
veriskein-content = { path = "../veriskein-content" }
veriskein-correlator = { path = "../veriskein-correlator" }
veriskein-detectors = { path = "../veriskein-detectors" }
veriskein-graph = { path = "../veriskein-graph" }
veriskein-normalizer = { path = "../veriskein-normalizer" }
veriskein-proto = { path = "../veriskein-proto" }
veriskein-state-net = { path = "../veriskein-state-net" }

[[bin]]
name = "veriskein-test"
path = "src/main.rs"

[lints]
workspace = true
